--- a/style.css
+++ b/style.css
@@ -9,71 +9,203 @@
     --violet-jtc: #632a50ff;
 }
 
-* {
-    padding: 0;
-    margin: 0;
+@media (min-width:930px) {
+    * {
+        padding: 0;
+        margin: 0;
+    }
+    body {
+        background: black;
+        height: 100vh;
+        width: 100vw;
+    }
+    header {
+        position: fixed;
+        width: 100%;
+        display: block;
+        justify-content: space-between;
+        align-items: center;
+        transition: 0.6s;
+        z-index: 10000;
+    }
+    header.sticky {
+        padding-bottom: .5rem;
+        position: fixed;
+        background-color: black;
+        height: 7em;
+        justify-content: space-between;
+    }
+    header.sticky li a {
+        color: white;
+        position: relative;
+        padding-right: 1em;
+    }
+    .hand {
+        float: left;
+        margin-top: 5px;
+        margin-right: 3em;
+        height: 5em;
+        width: 5em;
+    }
+    .links {
+        margin-right: 10em;
+        float: right;
+        justify-content: center;
+        align-items: center;
+    }
+    li {
+        float: right;
+        display: block;
+        text-decoration: none;
+    }
+    li a {
+        padding: 1em;
+        color: var(--violet-jtc);
+        float: right;
+        font-family: 'Playfair Display', serif;
+        display: block;
+        font-size: 2em;
+        text-decoration: none;
+        text-align: center;
+    }
+    h1 {
+        align-self: center;
+        order: 1;
+        position: relative;
+        font-size: 4em;
+        font-family: 'Playfair Display', serif;
+        z-index: 2;
+    }
+    p {
+        align-self: center;
+        order: 2;
+        position: relative;
+        font-size: 3em;
+    }
+    .button1 {
+        color: var(--violet-jtc);
+        margin-top: 1em;
+        order: 3;
+        text-decoration: none;
+        font-family: 'Dancing Script', cursive;
+        align-self: center;
+        font-size: 5em;
+        text-shadow: 1px 1px black;
+    }
+    .circle {
+        border: 5px solid var(--pear);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: beige;
+        position: absolute;
+        height: 40em;
+        width: 40em;
+        border-radius: 50%;
+        z-index: 3;
+    }
+    .forest {
+        filter: sepia(40%) hue-rotate(31deg) saturate(55%);
+        margin-left: 5%;
+        height: 40em;
+        width: 90%;
+    }
 }
 
-body {
-    height: 100vh;
-    width: 100vw;
-}
 
-header {
-    display: flex;
-    align-content: right;
-    height: 5em;
-    width: 100vw;
-}
-
-.hand {
-    align-self: right;
-    height: 5em;
-    width: 5em;
-}
-
-h1 {
-    align-self: center;
-    order: 1;
-    position: relative;
-    font-size: 4em;
-    font-family: 'Playfair Display', serif;
-    z-index: 2;
-}
-
-p {
-    align-self: center;
-    order: 2;
-    position: relative;
-    font-size: 3em;
-}
-
-.button1 {
-    color: var(--violet-jtc);
-    margin-top: 2em;
-    order: 3;
-    text-decoration: none;
-    font-family: 'Dancing Script', cursive;
-    align-self: center;
-    font-size: 3em;
-}
-
-.circle {
-    border: 5px solid var(--pear);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: beige;
-    position: absolute;
-    height: 40em;
-    width: 40em;
-    border-radius: 50%;
-    z-index: 3;
-}
-
-.forest {
-    filter: sepia(40%) hue-rotate(31deg) saturate(55%);
-    margin-left: 5em;
-    height: 40em;
-    width: 90vw;
-}
+/*@media (min-width:320px) {
+    body {
+        background: black;
+        height: 100vh;
+        width: 100vw;
+    }
+    header {
+        position: fixed;
+        width: 100%;
+        display: block;
+        justify-content: space-between;
+        align-items: center;
+        transition: 0.6s;
+        z-index: 10000;
+    }
+    header.sticky {
+        padding-bottom: .5rem;
+        position: fixed;
+        background-color: black;
+        height: 7em;
+        justify-content: space-between;
+    }
+    header.sticky li a {
+        color: white;
+        position: relative;
+        padding-right: 1em;
+    }
+    .hand {
+        float: left;
+        margin-top: 5px;
+        margin-right: 3em;
+        height: 50px;
+        width: 50px;
+    }
+    .links {
+        float: right;
+        margin-top: 10px;
+        margin-right: 1px;
+        height: 10em;
+        width: 5em;
+    }
+    li {
+        float: right;
+        display: block;
+        text-decoration: none;
+    }
+    li a {
+        margin-right: 2em;
+        color: var(--violet-jtc);
+        float: right;
+        display: block;
+        text-decoration: none;
+        text-align: right;
+    }
+    h1 {
+        align-self: center;
+        order: 1;
+        position: relative;
+        font-family: 'Playfair Display', serif;
+        z-index: 2;
+    }
+    p {
+        align-self: center;
+        order: 2;
+        position: relative;
+    }
+    .button1 {
+        color: var(--violet-jtc);
+        margin-top: 1em;
+        order: 3;
+        text-decoration: none;
+        font-family: 'Dancing Script', cursive;
+        align-self: center;
+        text-shadow: 1px 1px black;
+    }
+    .circle {
+        top: 8em;
+        border: 5px solid var(--pear);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: beige;
+        position: absolute;
+        height: 20em;
+        width: 20em;
+        border-radius: 50%;
+        z-index: 3;
+    }
+    .forest {
+        background-position: 70%;
+        filter: sepia(40%) hue-rotate(31deg) saturate(55%);
+        margin-left: 5%;
+        height: 100vh;
+        width: 90%;
+    }
+}*/
