--- a/style.css
+++ b/style.css
@@ -2,11 +2,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 :root {
     /* CSS HEX */
-    --pear: #c2e812ff;
+    /*--pear: #c2e812ff;
     --light-green: #91f5adff;
     --cadet-gray: #8b9eb7ff;
     --royal-purple: #745296ff;
-    --violet-jtc: #632a50ff;
+    --violet-jtc: #632a50ff;*/
+    /* New pallet */
+    --darkblue: #27213C;
+    --blue: #38726c;
+    --red: #A33B20;
+    --cafe: #5A352A;
+    --gray: #A6A57A;
+    --plum: #160224;
 }
 
 @media (min-width:930px) {
@@ -20,6 +27,7 @@
         width: 100vw;
     }
     header {
+        background: black;
         position: fixed;
         width: 100%;
         display: block;
@@ -48,7 +56,7 @@
         width: 5em;
     }
     .links {
-        margin-right: 10em;
+        margin-right: 5em;
         float: right;
         justify-content: center;
         align-items: center;
@@ -59,20 +67,24 @@
         text-decoration: none;
     }
     li a {
+        left: 5em;
         padding: 1em;
-        color: var(--violet-jtc);
+        color: var(--blue);
         float: right;
         font-family: 'Playfair Display', serif;
         display: block;
         font-size: 2em;
         text-decoration: none;
         text-align: center;
+        text-shadow: 1px white;
     }
     h1 {
+        margin-top: 2em;
+        color: var(--blue);
         align-self: center;
         order: 1;
         position: relative;
-        font-size: 4em;
+        font-size: 3.5em;
         font-family: 'Playfair Display', serif;
         z-index: 2;
     }
@@ -80,35 +92,66 @@
         align-self: center;
         order: 2;
         position: relative;
-        font-size: 3em;
+        font-size: 2.5em;
     }
     .button1 {
-        color: var(--violet-jtc);
-        margin-top: 1em;
+        color: var(--red);
+        margin-top: .5em;
         order: 3;
         text-decoration: none;
         font-family: 'Dancing Script', cursive;
         align-self: center;
-        font-size: 5em;
+        font-size: 4em;
         text-shadow: 1px 1px black;
     }
     .circle {
-        border: 5px solid var(--pear);
+        top: 18%;
+        border: 5px solid var(--cafe);
         display: flex;
         flex-direction: column;
         justify-content: center;
-        background-color: beige;
+        background-color: var(--gray);
         position: absolute;
-        height: 40em;
-        width: 40em;
+        height: 31em;
+        width: 31em;
         border-radius: 50%;
         z-index: 3;
+    }
+    .circle1 {
+        box-shadow: 1px 2px 10px 1px black;
+        top: 18%;
+        border: 5px solid var(--plum);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: var(--gray);
+        position: absolute;
+        height: 31em;
+        width: 31em;
+        border-radius: 50%;
+        z-index: 3;
+        opacity: 75%;
     }
     .forest {
         filter: sepia(40%) hue-rotate(31deg) saturate(55%);
         margin-left: 5%;
         height: 40em;
         width: 90%;
+    }
+    .runes {
+        height: 100vh;
+        width: 100vw;
+    }
+    .about_h1 {
+        top: -35%;
+    }
+    .p2 {
+        width: 25em;
+        top: -20%;
+        font-family: 'Playfair Display', serif;
+        font-size: 1em;
+        text-align: center;
+        z-index: 10000;
     }
 }
 
