--- a/style.css
+++ b/style.css
@@ -166,25 +166,28 @@
     }
     .shop {
         position: relative;
-        height: 50%;
-        width: 10%;
+        height: 100%;
+        width: 100%;
         background: url(incantation.jpg);
+        background-size: contain;
+        background-repeat: no-repeat;
     }
-    .forground {
+    /*.forground {
         background: url(incantation.jpg);
     }
     .incantation {
+
         height: 75vh;
         width: 50vh;
     }
-    /*.foreground {
+    .foreground {
         top: 0;
         position: absolute;
         background: white;
         height: 100vh;
         width: 100vw;
         z-index: 10000;
-    }*/
+    }
     .arch_1 {
         top: 0;
         background: white;
@@ -192,7 +195,7 @@
         width: 20em;
         clip-path: circle(60.4% at 50% 78%);
         z-index: 10000;
-    }
+    }*/
 }
 
 
