--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@
                 display: flex;
                 flex-direction: row;
                 position: relative;
-                align-content: stretch;
+                align-content: space-around;
                 justify-content: center;
                 left: 50em;
                 top: 25%;
@@ -211,13 +211,14 @@
                 color: var(--red);
             }
             .arch_1 img {
+                right: 4em;
                 top: 14em;
                 margin-top: 1em;
                 position: relative;
                 height: 15em;
                 width: 20em;
             }
-            .arch_1 p {
+            .arch_p {
                 position: relative;
                 font-size: 1em;
             }
