--- a/style.css
+++ b/style.css
@@ -281,9 +281,15 @@ h6 {
                 font-size: 4em;
                 text-shadow: 1px 1px black;
 }
+.shop_bg {
+    background: var(--gray);
+    height: 100vh;
+    width: 100vw;
+}
 .shop_prompt {
     margin-top: 5em;
     font-size: 1em;
+    color: wheat;
 }
         }
         
